add how we work

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									</div>
 	
 									<a class="nav-link" href="#">Проекты</a>
-									<a class="nav-link" href="#">Как мы работаем</a>
+									<a class="nav-link" href="work.html">Как мы работаем</a>
 									<a class="nav-link" href="safety.html">Политика безопасности</a>
 									<a class="nav-link" href="contacts.html">Контакты</a>
 								</div>
@@ -339,7 +339,7 @@
 						<a class="nav-link" href="#">О нас</a>
 						<a class="nav-link" href="#">Карьера</a>
 						<a class="nav-link" href="#">Проекты</a>
-						<a class="nav-link" href="#">Как мы работаем</a>
+						<a class="nav-link" href="work.html">Как мы работаем</a>
 						<a class="nav-link" href="safety.html">Политика безопасности</a>
 						<a class="nav-link" href="contacts.html">Контакты</a>
 					</div>
